@@ -44,6 +44,7 @@ Brecht Sanders <brecht@sanders.org>
 Jan Janak <jan@janakj.org>
 Matthew Mundell <matthew.mundell@greenbone.net>
 Scott Goldman <scottjg@github.com>
+Jared Cantwell
 
 Documentation contributions also came from:
 Marco Maggi <marco.maggi-ipsu@poste.it>
