@@ -22,7 +22,7 @@
 #
 AC_PREREQ(2.57)
 AC_INIT([libmicrohttpd], [0.9.31],[libmicrohttpd@gnu.org])
-AM_INIT_AUTOMAKE([silent-rules serial-tests])
+AM_INIT_AUTOMAKE([silent-rules])
 AC_CONFIG_HEADERS([MHD_config.h])
 AC_CONFIG_MACRO_DIR([m4])
 AH_TOP([#define _GNU_SOURCE  1])
